# WindowsMediaSDK

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.txt
example/DuiLib/: CMakeLists.txt
example/audio_capture/: CMakeLists.txt  main.cpp
example/camera_capture/: CMakeLists.txt  main.cpp  main_window.cc  main_window.h  my_window.cc  video_device_choose_window.cc  video_device_choose_window.h  video_device_event_handler.cc  video_device_event_handler.h
example/camera_capture/xml/: main_window.xml
example/h264_analyzer/: CMakeLists.txt  bs.h  main.cpp
example/local_log/: CMakeLists.txt  main.cpp
example/media_sdk_demo/: CMakeLists.txt  audio_device_window.cc  audio_device_window.h  dump_writer.cc  dump_writer.h  main.cpp  main_window.cc  main_window.h  screen_handler.cc  screen_handler.h  screen_share_window.cc  screen_share_window.h  socket_client.cc  socket_client.h  socket_client_window.cc  socket_client_window.h  video_device_window.cc  video_handler.cc  video_handler.h
example/media_sdk_demo/xml/: audio_device_window.xml  main_window.xml  screen_share_window.xml  socket_client_window.xml
example/media_server_demo/: CMakeLists.txt  main.cpp  main_window.cc  main_window.h  my_window.h  socket_server.cc  socket_server.h
example/media_server_demo/xml/: main_window.xml
example/screen_capture/: CMakeLists.txt  event_callback.cc  event_callback.h  main_window.cc  main_window.h
example/screen_capture/xml/: screen_capture_window.xml
example/script/: copy_file.bat
example/socket_client/: CMakeLists.txt  main.cpp  socket_client.cc  socket_client.h
example/socket_server/: CMakeLists.txt  main.cpp  socket_server.cc  socket_server.h
example/video_decoder/: CMakeLists.txt  main.cpp
example/video_encoder/: CMakeLists.txt  main.cpp
example/video_render/: CMakeLists.txt  main.cpp  main_window.cc  main_window.h  my_window.cc
example/video_render/xml/: main_window.xml
mediasdk/: CMakeLists.txt
mediasdk/audio_capture/: audio_common.h  audio_engine.cc  audio_engine.h  audio_event_handler.h
mediasdk/audio_capture/device/: audio_device_listener.cc  audio_device_listener.h  audio_device_manager.cc  audio_device_manager.h  audio_volume_listener.cc  audio_volume_listener.h
mediasdk/camera_capture/: video_capture_engine.cc  video_capture_engine.h  video_common.h  video_event_handler.h  video_log.h
mediasdk/camera_capture/video/: video_capture.cc  video_capture.h  video_capture_factory.cc  video_capture_factory.h  video_capture_manager.cc  video_capture_manager.h  video_capture_proxy.cc  video_capture_proxy.h  video_device_manager.cc  video_device_manager.h  video_device_monitor.cc  video_device_monitor.h  video_info.h  video_utils.cc  video_utils.h
mediasdk/camera_capture/video/dshow/: dshow_utils.cc  dshow_utils.h  sink_filter_ds.cc  sink_filter_ds.h  video_capture_dshow.cc  video_capture_dshow.h  video_device_dshow.cc  video_device_dshow.h
mediasdk/camera_capture/video/mf/: mf_utils.cc  mf_utils.h  video_capture_mf_engine.cc  video_capture_mf_engine.h  video_capture_mf_source_reader.cc  video_capture_mf_source_reader.h  video_device_mf.cc  video_device_mf.h
mediasdk/common/: atomicops.h  buffer.cc  buffer.h  buffer_pool.cc  buffer_pool.h  readerwriterqueue.h  string_utils.cc  string_utils.h  task_thread.cc  task_thread.h  version_helper.cc  version_helper.h  video_frame.cc  video_frame.h
mediasdk/local_log/: local_log.cc  local_log.h  log_common.h  log_env.cc  log_env.h  log_utils.cc  log_utils.h  log_writer.cc  log_writer.h
mediasdk/sample_common/include/: d3d11_device.h  d3d_device.h  hw_device.h  plugin_loader.h  sample_utils.h
mediasdk/sample_common/src/: d3d11_device.cpp  d3d_device.cpp  sample_utils.cpp
mediasdk/screen_capture/: screen_capture_engine.cc  screen_capture_engine.h  screen_common.h  screen_event_handler.h
mediasdk/screen_capture/screen/: screen_capture.cc  screen_capture.h  screen_capture_factory.cc  screen_capture_factory.h  transparent_window.cc  transparent_window.h  window_manager.cc  window_manager.h  window_utils.cc  window_utils.h
mediasdk/screen_capture/screen/dxgi/: draw_cursor.cc  draw_cursor.h  dxgi_texture.cc  dxgi_texture.h  dxgi_texture_mapping.cc  dxgi_texture_mapping.h  dxgi_texture_staging.cc  dxgi_texture_staging.h  screen_capture_dxgi.cc  screen_capture_dxgi.h
mediasdk/screen_capture/screen/gdi/: bitmap_gdi.cc  bitmap_gdi.h  screen_capture_gdi.cc  screen_capture_gdi.h
mediasdk/screen_capture/screen/hook/: d3d9_hook.cc  d3d9_hook.h
mediasdk/screen_capture/screen/mag/: mag_thread.cc  mag_thread.h  mag_window.cc  mag_window.h  screen_capture_mag.cc  screen_capture_mag.h
mediasdk/screen_capture/screen/thumbnail/: thumbnail_manager.cc  thumbnail_manager.h  thumbnail_window.cc  thumbnail_window.h
mediasdk/video_decoder/: video_decoder.cc  video_decoder.h  video_decoder_factory.cc  video_decoder_factory.h
mediasdk/video_decoder/ffmpeg/: video_decoder_ffmpeg.cc  video_decoder_ffmpeg.h
mediasdk/video_decoder/qsv/: video_decoder_qsv.cc  video_decoder_qsv.h
mediasdk/video_encoder/: video_encoder.cc  video_encoder.h  video_encoder_factory.cc  video_encoder_factory.h
mediasdk/video_encoder/ffmpeg/: video_encoder_ffmpeg.cc  video_encoder_ffmpeg.h
mediasdk/video_encoder/openh264/: video_encoder_openh264.cc  video_encoder_openh264.h
mediasdk/video_encoder/qsv/: video_encoder_qsv.cc  video_encoder_qsv.h
mediasdk/video_encoder/x264/: video_encoder_x264.cc  video_encoder_x264.h
mediasdk/video_encoder/x265/: video_encoder_x265.cc  video_encoder_x265.h
mediasdk/video_render/: video_render.cc  video_render.h  video_render_factory.cc  video_render_factory.h
mediasdk/video_render/SDL/: video_render_sdl.cc  video_render_sdl.h
mediasdk/video_render/d3d9/: video_render_d3d9.cc  video_render_d3d9.h
mediasdk/video_render/opengl/: video_render_opengl.cc  video_render_opengl.h
third/include/libx265/: x265_config.h
third/include/openh264/wels/: codec_api.h  codec_app_def.h
third/lib/detours/: detours.lib
third/lib/openh264/: openh264.lib
third/lib/x264/: libx264.lib
(+19 files in other folders)
